--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="static/msui/sm.min.css">
     <script type='text/javascript' src='static/msui/zepto.min.js' charset='utf-8'></script>
     <script>
+        window.isIos=true
         $.config = {router: false, autoInit: false};
     </script>
     <style>
